# WebOptEnv

./: .gitignore  MCP_INSPECTOR_GUIDE.md  README.md  package-lock.json  package.json  test-container.sh
alfternative-reward/src/: generate_spec.py  login-page.txt
baseline/: claude_cot_baseline.ipynb
dataset/: .gitignore  dataset_builder.py
environments/test/: README.md  pyproject.toml
functional-reward/: .bash_profile  .gitconfig  .gitignore  models.py  paste_1764437789237.txt  pyproject.toml  web_opt_environment.py
functional-reward/.config/uv/: uv-receipt.json
functional-reward/examples/: example_usage.py
functional-reward/src/: generate_and_score.py  login-page-crop-score.txt  login-page-score.txt  login-page2.txt  screen-book-ref.txt  screen-books-opt-score.txt
functional-reward/src/anthropic_helpers/: __init__.py  llm.py
functional-reward/tests/: test_llm.py
my_env/: README.md  __init__.py  client.py  models.py  pyproject.toml
my_env/lighthouse/: MCP_INSPECTOR_GUIDE.md  QUICKSTART.md  mcp-config.json
my_env/lighthouse/src/: index.ts
my_env/server/: Dockerfile  __init__.py  app.py  bank_tools.py  my_env_environment.py
open-env/: README.md
test-app/: index.html
web_opt/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
web_opt/lighthouse/: Dockerfile  MCP_INSPECTOR_GUIDE.md  deploy-and-serve.sh
web_opt/lighthouse/src/: index.ts
web_opt/server/: Dockerfile  __init__.py  app.py  bank_tools.py  web_opt_environment.py
