[project]
name = "anthropic-helpers"
version = "0.1.0"
description = "Anthropic LLM helper functions with async support"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "tenacity>=9.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anthropic_helpers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"